--- a/index.html
+++ b/index.html
@@ -146,6 +146,57 @@
         </div>
         </div>
     </section>
+    <!--Foother-->
+    <footer>
+        <div class="container">
+            <div class="back-to-top">
+                <a href="#hero"><i class="fas fa-chevron-up"></i></a>
+            </div>
+            <div class="footer-content">
+                <div class="footer-content-about animate-top">
+                    <h4>About Rosa</h4>
+                    <div class="asterisk"><i class="fas fa-asterisk"></i></div>
+                    <p>
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Veniam, laborum autem
+                        quo corrupti quam enim, delectus
+                        repellat sit quos qui ullam ex voluptates asperiores
+                        numquam eius iste quisquam distinctio. Ipsum!
+                    </p>
+                </div>
+                <div class="footer-content-devider animate-bottom">
+                    <div class="social-media">
+                        <h4>Follow along</h4>
+                        <ul class="social-icons">
+                            <li>
+                                <a href=""><i class="fab fa-twitter"></i></a>
+                            </li>
+                            <li>
+                                <a href=""><i class="fab fa-facebook-square"></i></a>
+                            </li>
+                            <li>
+                                <a href=""><i class="fab fa-pinterest"></i></a>
+                            </li>
+                            <li>
+                                <a href=""><i class="fab fa-linkedin-in"></i></a>
+                            </li>
+                            <li>
+                                <a href=""><i class="fab fa-tripadvisor"></i></a>
+                            </li>
+                        </ul>
+                    </div>
+                    <div class="newsletter-container">
+                        <h4>Newsletter</h4>
+                        <form action="" class="newsletter-form">
+                            <input type="" class="newsletter-input" placeholder="Em@il Address">
+                            <button class="newsletter-btn" type="submit">
+                                <i class="fas fa-envelope"></i>
+                            </button>
+                        </form>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </footer>
     <script src="main.js"></script>
   </body>
 </html>
